data/forge_javadoc/1.7.10/raw/net/minecraft/client/gui/GuiOptionSlider.md
---
title: "GuiOptionSlider"
description: "public class GuiOptionSlider extends GuiButton"
package: "net/minecraft/client/gui"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/gui/GuiOptionSlider.html"
sourceType: javadoc
---

# GuiOptionSlider

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiButton → net.minecraft.client.gui.GuiOptionSlider

## Class signature

```java
public class GuiOptionSlider extends GuiButton
```

## Constructors

- `GuiOptionSlider(int p_i45016_1_, int p_i45016_2_, int p_i45016_3_, GameSettings.Options p_i45016_4_)`
- `GuiOptionSlider(int p_i45017_1_, int p_i45017_2_, int p_i45017_3_, GameSettings.Options p_i45017_4_, float p_i45017_5_, float p_i45017_6_)`

## Methods

- `int getHoverState(boolean p_146114_1_)`
- `protected void mouseDragged(Minecraft p_146119_1_, int p_146119_2_, int p_146119_3_)`
- `boolean mousePressed(Minecraft p_146116_1_, int p_146116_2_, int p_146116_3_)`
- `void mouseReleased(int p_146118_1_, int p_146118_2_)`

## Fields

- `boolean field_146135_o`
